--- a/Areas/Admin/Views/Shared/_DashboardLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_DashboardLayout.cshtml
@@ -64,7 +64,10 @@
 					</li>
 
 					<li>
-						<a class="nav-link" href="#">
+						<a class="nav-link@(Active("Admin", "Services", "Index"))"
+						   asp-area="Admin"
+						   asp-controller="Services"
+						   asp-action="Index">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="currentColor">
 								<path d="M216,56H176V48a24,24,0,0,0-24-24H104A24,24,0,0,0,80,48v8H40A16,16,0,0,0,24,72V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V72A16,16,0,0,0,216,56ZM96,48a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96ZM216,72v41.61A184,184,0,0,1,128,136a184.07,184.07,0,0,1-88-22.38V72Zm0,128H40V131.64A200.19,200.19,0,0,0,128,152a200.25,200.25,0,0,0,88-20.37V200ZM104,112a8,8,0,0,1,8-8h32a8,8,0,0,1,0,16H112A8,8,0,0,1,104,112Z"></path>
 							</svg>
@@ -72,7 +75,11 @@
 						</a>
 					</li>
 					<li>
-						<a class="nav-link" href="#">
+						<a class="nav-link@(Active("Admin", "Exchanges", "Index"))"
+						   asp-area="Admin"
+						   asp-controller="Exchanges"
+						   asp-action="Index">
+							
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256" fill="currentColor">
 								<path d="M213.66,181.66l-32,32a8,8,0,0,1-11.32-11.32L188.69,184H48a8,8,0,0,1,0-16H188.69l-18.35-18.34a8,8,0,0,1,11.32-11.32l32,32A8,8,0,0,1,213.66,181.66Zm-139.32-64a8,8,0,0,0,11.32-11.32L67.31,88H208a8,8,0,0,0,0-16H67.31L85.66,53.66A8,8,0,0,0,74.34,42.34l-32,32a8,8,0,0,0,0,11.32Z"></path>
 							</svg>
